# src-link

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  Frameworks.cmake.in  README.md  README_ja.md  build-windows-installer.ps1  build.ps1  buildspec.json
.claude/: .gitignore  settings.json
.claude/agents/: av-sensei.md  comment-sensei.md  cpp-sensei.md  devops-sensei.md  lua-sensei.md  network-sensei.md  obs-sensei.md  python-sensei.md  qt-sensei.md  review-helper.md  translation-sensei.md
.claude/commands/: parallel-review.md  review-resolve.md  review-respond.md  review-rounds.md
.claude/rules/: comment.md  commit.md  development.md  document.md  prompt.md  review-pedantry.md  review.md  sub-agent.md
.claude/scripts/: fetch-diff.sh  render-review.py  rm-tmp.sh
.claude/sequencer/programs/: review_rounds.py
.claude/sequencer/programs/review_rounds/: final-report-compile.md  final-report-format.md
.claude/skills/parallel-review/: SKILL.md
.claude/skills/parallel-review/templates/: aggregator.md  review-doc.md  reviewer.md  scope-analysis.md
.claude/skills/prompt-editor/: SKILL.md
.claude/skills/prompt-editor/templates/: agent.md  command.md  prompt.md  rule.md  skill.md  test-checklist-prompt-md.md
.claude/skills/review-resolve/: SKILL.md
.claude/skills/review-resolve/templates/: analyze.md  compile.md  verify.md
.claude/skills/review-respond/: SKILL.md
.claude/skills/review-respond/templates/: build-fix.md  compile.md  estimate-summary.md  estimate.md  fix.md  format-build-verify.md  respond-summary.md  triage.md
.claude/skills/review-rounds/: SKILL.md
.claude/skills/review-rounds/templates/: final-report-compile.md  final-report.md
.github/actions/build-plugin/: action.yaml
.github/actions/package-plugin/: action.yaml
.github/actions/run-clang-format/: action.yaml
.github/actions/run-cmake-format/: action.yaml
.github/scripts/utils.zsh/: setup_linux
.github/workflows/: build-project.yaml
build-aux/: .run-format.zsh
cmake/macos/: buildspec.cmake  xcode.cmake
cmake/windows/: buildspec.cmake
cmake/windows/resources/: installer-Windows.iss.in
data/: oauth-reply-en-US.html  oauth-reply-ja-JP.html  oss.md
data/locale/: en-US.ini  ja-JP.ini
data/presets/: com.apple.videotoolbox.videoencoder.ave.avc.json  com.apple.videotoolbox.videoencoder.ave.hevc.json  h264_texture_amf.json  h265_texture_amf.json  jim_hevc_nvenc.json  jim_nvenc.json  obs_nvenc_h264_tex.json  obs_nvenc_hevc_tex.json  obs_qsv11_hevc.json  obs_qsv11_v2.json  obs_x264.json
lib/o2/: CMakeLists.txt
mediamtx/: docker-compose.yaml  mediamtx.yml
shared/properties-view/: CMakeLists.txt  double-slider.cpp  properties-view.cpp  properties-view.hpp
shared/qt/wrappers/: qt-wrappers.cpp  qt-wrappers.hpp
src/: api-client.cpp  api-client.hpp  api-websocket.cpp  api-websocket.hpp  objects.hpp  plugin-main.cpp  plugin-support.c.in  plugin-support.h  request-invoker.cpp  request-invoker.hpp  schema.hpp  settings.cpp  settings.hpp  source-link-service.cpp  source-link-service.hpp  utils.cpp  utils.hpp
src/UI/: api-client.cpp  api-client.hpp  authentication.cpp  authentication.hpp  common.cpp  common.hpp  egress-link-connection-widget.cpp  egress-link-connection-widget.hpp  egress-link-connection-widget.ui  egress-link-dock.cpp  egress-link-dock.hpp  egress-link-dock.ui  oauth2.cpp  oauth2.hpp  objects.hpp  output-dialog.cpp  output-dialog.hpp  output-dialog.ui  redeem-invite-code-dialog.cpp  redeem-invite-code-dialog.hpp  redeem-invite-code-dialog.ui  resources.qrc  settings-dialog.cpp  settings-dialog.hpp  settings-dialog.ui  source-link-connection-widget.cpp  source-link-connection-widget.hpp  source-link-connection-widget.ui  source-link-dock.cpp  source-link-dock.hpp  source-link-dock.ui  ws-portal-dock.cpp  ws-portal-dock.hpp  ws-portal-dock.ui
src/controllers/: ws-portal.cpp  ws-portal.hpp
src/net/: curl-http-client.cpp  curl-http-client.hpp  http-error.cpp  http-error.hpp  http-request-invoker.cpp  http-request-invoker.hpp  http-response.hpp  linux-ca-locations.cpp  linux-ca-locations.hpp  local-http-server.cpp  local-http-server.hpp  oauth2-client.cpp  oauth2-client.hpp  ws-client.cpp  ws-client.hpp
src/outputs/: audio-source.cpp  audio-source.hpp  egress-link-output.cpp  egress-link-output.hpp  linked-output.cpp  linked-output.hpp
src/sources/: audio-capture.cpp  audio-capture.hpp  image-renderer.cpp  image-renderer.hpp  ingress-link-source.cpp  ingress-link-source.hpp  linked-source.cpp  linked-source.hpp  srt-source.cpp
src/ws-portal/: event-handler.cpp  event-handler.hpp  ws-portal-client.cpp  ws-portal-client.hpp
srtrelay/: docker-compose.yaml  srtrelay-config.toml
